# TFG_CDPR

./: error_seguimiento.csv  frames_2026-01-28_12.20.52.gv  frames_2026-01-28_18.44.52.gv  trajectory_log.csv
install/: local_setup.sh  setup.sh
install/skycam_control/lib/skycam_control/: ball_mover  plot_3d  plot_error  plot_tensiones  skycam_ai_tracker  skycam_cable_1  skycam_commander  skycam_controller  skycam_dynamics  skycam_force_test  skycam_four_cables  skycam_goal_sender  skycam_trajectory_planner  tension_logger
install/skycam_control/share/skycam_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/skycam_description/lib/skycam_description/: simple_tf_broadcaster.py
install/skycam_description/share/skycam_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/skycam_control/: package.xml  setup.cfg  setup.py
src/skycam_control/skycam_control/: __init__.py  ball_mover.py  plot_3d.py  plot_tensiones.py  plot_workspace.py  skycam_ai_tracker.py  skycam_force_test.py  skycam_four_cables.py  skycam_goal_sender.py  skycam_trajectory_planner.py  tension_logger.py  tensiones_vuelo.csv  trajectory_log.csv
src/skycam_description/: CMakeLists.txt
src/skycam_description/config/: config.rviz
src/skycam_description/launch/: display_gazebo.launch.py
src/skycam_description/urdf/: ball.xacro  simple_sphere.xacro  skycam.urdf  skycam.xacro  skycam_gazebo.xacro  skycam_rviz.xacro
src/skycam_description/worlds/: normal.world
(+16 files in other folders)
